--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/react-pdf": "^7.0.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -23,6 +24,7 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pdf": "^9.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
